Fixed index.html for homepage

--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Drum Kit</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="frontpage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Quicksand&family=Bebas+Neue&display=swap" rel="stylesheet">
+
 </head>
-
 <body>
+     <div class="frontpage">
+        <h1> 🥁The Drum Kit Game🥁</h1>
+        <h2>Let's play together.</h2>
+        <p> <span class="description">Description:</span>
+This is a Drum Kit game designed by me as part of my web development learning journey.<br/> It is built using HTML, CSS, and JavaScript. The game works both by clicking the on-screen buttons and by pressing corresponding keys on your keyboard.<br/>
+Enjoy the beats and have fun!<br/>
+Feel free to share your suggestions or feedback through the Contact Me section on my portfolio.<br/>
+Thank you for visiting!</p>
+ <p>click here!👇</p>
+<a href="drumpage.html" class="image-button">
+  <img src="images\frontpage.png" alt="Drum Kit" />
+</a>
 
-  <h1 id="title">Drum 🥁 Kit</h1>
-  <div class="set">
-    <button class="w drum">w</button>
-    <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
-    <button class="l drum">l</button>
-  </div>
-
-
-  <footer>
-    <p>@copy Aaradhya</p>
-  </footer>
+    </div>
 
 
-  <script src="index.js"></script>
+    
+    
 </body>
-
 </html>
